syntax = "proto3";

package movie;

option java_multiple_files = true;
option java_package = "proto.files";
option java_outer_classname = "MovieServiceProto";

message Movie {
  int64 id = 1;
  string title = 2;
  string director = 3;
  string genre = 4;
  int32 year = 5;
}

message GetMovieRequest {
  int64 id = 1;
}

message GetMovieResponse {
  Movie movie = 1;
}

message CreateMovieRequest {
  string title = 1;
  string director = 2;
  string genre = 3;
  int32 year = 4;
}

message Empty {}

service MovieService {
  rpc GetMovie(GetMovieRequest) returns (GetMovieResponse);
  rpc CreateMovie(CreateMovieRequest) returns (Empty);
  rpc UpdateMovie(Movie) returns (Empty);
  rpc DeleteMovie(GetMovieRequest) returns (Empty);
}
